--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="submit">Submit</string>
+    <string name="apply">Apply</string>
     <string name="simply_enter_the_existing_username_and_the_corresponding_password">Simply enter the existing username and the corresponding password.</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="pressOnceAgainToExit">Press once again to exit</string>
@@ -49,4 +50,8 @@
     <string name="somePermissionsAreRequiredToDoTheTask">Some permissions are required to do the task.</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
+
+    ////
+    <string name="job_list">Job Post List</string>
+    <string name="job_post_request">Job Post Request</string>
 </resources>
